--- a/forgot_password.html
+++ b/forgot_password.html
@@ -5,20 +5,21 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no">
     <title>Reset Password</title>
+    <meta name="theme-color" content="#4e73df">
     <meta name="author" content="SRKP Technologies">
     <meta name="description" content="Doctor Appointment Booking">
-    <link rel="stylesheet" href="assets/bootstrap/css/bootstrap.min.css?h=6bb95e10454a78aaf4b0ac792aaf69e2">
+    <link rel="stylesheet" href="assets/bootstrap/css/bootstrap.min.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Nunito:200,200i,300,300i,400,400i,600,600i,700,700i,800,800i,900,900i">
-    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.12.0/css/all.css">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-    <link rel="stylesheet" href="assets/fonts/fontawesome5-overrides.min.css?h=2c0fc24b3d3038317dc51c05339856d0">
-    <link rel="stylesheet" href="assets/css/style.css?h=6b0e8c04481fe6634992c8d736a9e988">
+    <link rel="stylesheet" href="assets/fonts/fontawesome-all.min.css">
+    <link rel="stylesheet" href="assets/fonts/font-awesome.min.css">
+    <link rel="stylesheet" href="assets/fonts/fontawesome5-overrides.min.css">
+    <link rel="stylesheet" href="assets/css/style.css">
 </head>
 
 <body class="bg-gradient-primary">
     <div class="container">
         <div class="row">
-            <div class="col-lg-6 col-xl-4 offset-xl-2 doc_login-form"><img class="img-fluid" src="assets/img/forgot-password.jpg?h=c6710b1592399689499976396180dd3e"></div>
+            <div class="col-lg-6 col-xl-4 offset-xl-2 doc_login-form"><img class="img-fluid" src="assets/img/forgot-password.jpg"></div>
             <div class="col-lg-6 col-xl-4 offset-xl-0 doc_login-form">
                 <div class="p-5">
                     <div class="text-center">
@@ -26,7 +27,7 @@
                         <p class="mb-4">We get it, stuff happens. Just enter your email address below and we'll send you a link to reset your password!</p>
                     </div>
                     <form class="user">
-                        <div class="form-group"><input class="form-control form-control-user" type="email" id="exampleInputEmail" aria-describedby="emailHelp" placeholder="Enter Email Address..." name="email"></div><button class="btn btn-primary btn-block text-white btn-user"
+                        <div class="form-group"><input class="form-control form-control-user" type="email" id="exampleInputEmail" aria-describedby="emailHelp" placeholder="Enter email address..." name="email"></div><button class="btn btn-primary btn-block text-white btn-user"
                             type="submit">Reset Password</button></form>
                     <div class="text-center">
                         <hr>
@@ -36,12 +37,12 @@
             </div>
         </div>
     </div>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.5.0/js/bootstrap.bundle.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.8.0/Chart.bundle.min.js"></script>
-    <script src="assets/js/bs-init.js?h=08ba999e06fc97f895c72848bddb91c1"></script>
+    <script src="assets/js/jquery.min.js"></script>
+    <script src="assets/bootstrap/js/bootstrap.min.js"></script>
+    <script src="assets/js/chart.min.js"></script>
+    <script src="assets/js/bs-init.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-easing/1.4.1/jquery.easing.js"></script>
-    <script src="assets/js/style.js?h=d41d8cd98f00b204e9800998ecf8427e"></script>
+    <script src="assets/js/style.js"></script>
 </body>
 
 </html>
