--- a/reschedule_chamber.html
+++ b/reschedule_chamber.html
@@ -4,15 +4,16 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no">
-    <title>Reschdule Chamber</title>
+    <title>Reschedule Appointment</title>
+    <meta name="theme-color" content="#4e73df">
     <meta name="author" content="SRKP Technologies">
     <meta name="description" content="Doctor Appointment Booking">
-    <link rel="stylesheet" href="assets/bootstrap/css/bootstrap.min.css?h=6bb95e10454a78aaf4b0ac792aaf69e2">
+    <link rel="stylesheet" href="assets/bootstrap/css/bootstrap.min.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Nunito:200,200i,300,300i,400,400i,600,600i,700,700i,800,800i,900,900i">
-    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.12.0/css/all.css">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-    <link rel="stylesheet" href="assets/fonts/fontawesome5-overrides.min.css?h=2c0fc24b3d3038317dc51c05339856d0">
-    <link rel="stylesheet" href="assets/css/style.css?h=6b0e8c04481fe6634992c8d736a9e988">
+    <link rel="stylesheet" href="assets/fonts/fontawesome-all.min.css">
+    <link rel="stylesheet" href="assets/fonts/font-awesome.min.css">
+    <link rel="stylesheet" href="assets/fonts/fontawesome5-overrides.min.css">
+    <link rel="stylesheet" href="assets/css/style.css">
 </head>
 
 <body id="page-top" style="background-color: rgb(255,255,255);">
@@ -29,17 +30,17 @@
                     <li class="nav-item" role="presentation"><a class="nav-link shadow-lg" href="book_appointment.html"><i class="fas fa-user"></i><span><strong>Book Appointment</strong></span></a></li>
                     <li class="nav-item" role="presentation"><a class="nav-link shadow-lg" href="book_ot.html"><i class="fas fa-medkit"></i><span><strong>Book OT</strong></span></a></li>
                     <li class="nav-item" role="presentation">
-                        <div class="nav-item dropdown shadow-lg" style="margin-bottom: 0rem;"><a class="dropdown-toggle nav-link" data-toggle="dropdown" aria-expanded="false" href="#"><i class="fas fa-clipboard-list"></i><span><strong>Today's Works</strong></span></a>
-                            <div class="dropdown-menu" role="menu"><a class="dropdown-item" role="presentation" href="today%27s_appointment.html"><i class="fas fa-stethoscope"></i><strong>Today's Bookings</strong></a><a class="dropdown-item" role="presentation" href="today%27s_ot.html"><i class="fas fa-stethoscope"></i><strong>Today's OT</strong></a></div>
+                        <div class="nav-item dropdown shadow-lg nav-dropdown"><a class="dropdown-toggle nav-link" data-toggle="dropdown" aria-expanded="false" href="#"><i class="fas fa-clipboard-list"></i><span><strong>Today's Works</strong></span></a>
+                            <div class="dropdown-menu dropdown-menu-left" role="menu"><a class="dropdown-item" role="presentation" href="today%27s_appointment.html" style="width: 100px;"><i class="fas fa-stethoscope"></i><strong>Today's Bookings</strong></a><a class="dropdown-item" role="presentation" href="today%27s_ot.html"><i class="fas fa-stethoscope"></i><strong>Today's OT</strong></a></div>
                         </div>
                     </li>
                     <li class="nav-item" role="presentation">
-                        <div class="nav-item dropdown show shadow-lg" style="margin-bottom: 0rem;"><a class="dropdown-toggle nav-link" data-toggle="dropdown" aria-expanded="true" href="#"><i class="fas fa-search"></i><span><strong>Search</strong></span></a>
-                            <div class="dropdown-menu show" role="menu"><a class="dropdown-item" role="presentation" href="search_appointments.html"><i class="fas fa-stethoscope"></i><strong>Search Appointment</strong></a><a class="dropdown-item" role="presentation" href="search_ot.html"><i class="fas fa-syringe"></i><strong>Search OT</strong></a></div>
+                        <div class="nav-item dropdown shadow-lg nav-dropdown"><a class="dropdown-toggle nav-link" data-toggle="dropdown" aria-expanded="false" href="#"><i class="fas fa-search"></i><span><strong>Search</strong></span></a>
+                            <div class="dropdown-menu" role="menu"><a class="dropdown-item" role="presentation" href="search_appointments.html"><i class="fas fa-stethoscope"></i><strong>Search Appointment</strong></a><a class="dropdown-item" role="presentation" href="search_ot.html"><i class="fas fa-syringe"></i><strong>Search OT</strong></a></div>
                         </div>
                     </li>
                     <li class="nav-item" role="presentation">
-                        <div class="nav-item dropdown shadow-lg" style="margin-bottom: 0;"><a class="dropdown-toggle nav-link" data-toggle="dropdown" aria-expanded="false" href="#"><i class="far fa-calendar-plus"></i><span><strong>Reschedule</strong></span></a>
+                        <div class="nav-item dropdown shadow-lg nav-dropdown"><a class="dropdown-toggle nav-link" data-toggle="dropdown" aria-expanded="false" href="#"><i class="far fa-calendar-plus"></i><span><strong>Reschedule</strong></span></a>
                             <div class="dropdown-menu" role="menu"><a class="dropdown-item" role="presentation" href="reschedule_chamber.html"><i class="fas fa-stethoscope"></i><strong>Reschedule Appointment</strong></a><a class="dropdown-item" role="presentation" href="reschedule_ot.html"><i class="fas fa-syringe"></i><strong>Reschedule OT</strong></a></div>
                         </div>
                     </li>
@@ -56,15 +57,6 @@
                 <nav class="navbar navbar-light navbar-expand shadow mb-4 topbar static-top bg-gradient-primary">
                     <div class="container-fluid"><button class="btn btn-link d-md-none rounded-circle mr-3" id="sidebarToggleTop" type="button"><i class="fas fa-bars"></i></button>
                         <ul class="nav navbar-nav flex-nowrap ml-auto">
-                            <li class="nav-item dropdown d-sm-none no-arrow"><a class="dropdown-toggle nav-link" data-toggle="dropdown" aria-expanded="false" href="#"><i class="fas fa-search"></i></a>
-                                <div class="dropdown-menu dropdown-menu-right p-3 animated--grow-in" role="menu" aria-labelledby="searchDropdown">
-                                    <form class="form-inline mr-auto navbar-search w-100">
-                                        <div class="input-group"><input class="bg-light form-control border-0 small" type="text" placeholder="Search for ...">
-                                            <div class="input-group-append"><button class="btn btn-primary py-0" type="button"><i class="fas fa-search"></i></button></div>
-                                        </div>
-                                    </form>
-                                </div>
-                            </li>
                             <li class="nav-item dropdown no-arrow mx-1" role="presentation">
                                 <div class="nav-item dropdown no-arrow"><a class="dropdown-toggle nav-link" data-toggle="dropdown" aria-expanded="false" href="#"><span class="badge badge-danger badge-counter">3+</span><i class="fas fa-bell fa-fw"></i></a>
                                     <div class="dropdown-menu dropdown-menu-right dropdown-list dropdown-menu-right animated--grow-in"
@@ -142,7 +134,7 @@
                             </li>
                             <div class="d-none d-sm-block topbar-divider"></div>
                             <li class="nav-item dropdown no-arrow" role="presentation">
-                                <div class="nav-item dropdown no-arrow"><a class="dropdown-toggle nav-link" data-toggle="dropdown" aria-expanded="false" href="#"><span class="d-none d-lg-inline mr-2 text-white-600 small">admin</span><img class="border rounded-circle img-profile" src="assets/img/doctor-book.jpg?h=a78c11ac9558f51e8969d72d3e0a6226"></a>
+                                <div class="nav-item dropdown no-arrow"><a class="dropdown-toggle nav-link" data-toggle="dropdown" aria-expanded="false" href="#"><span class="d-none d-lg-inline mr-2 text-white-600 small">admin</span><img class="border rounded-circle img-profile" src="assets/img/doctor-book.jpg"></a>
                                     <div
                                         class="dropdown-menu shadow dropdown-menu-right animated--grow-in how" role="menu"><a class="dropdown-item" role="presentation" href="#"><i class="fas fa-user-plus fa-sm fa-fw mr-2 text-gray-400"></i>&nbsp;Add new user</a>
                                         <div class="dropdown-divider"></div><a class="dropdown-item" role="presentation" href="index.html"><i class="fas fa-sign-out-alt fa-sm fa-fw mr-2 text-gray-400"></i>&nbsp;Logout</a></div>
@@ -182,10 +174,10 @@
                             <div class="card-header py-3">
                                 <p class="text-primary m-0 font-weight-bold">Appointment Details for:&nbsp;<span>Souvik Kundu (7278491931)</span></p>
                             </div>
-                            <div class="card-body" style="height: 64vh;overflow-y: scroll;">
+                            <div class="card-body">
                                 <div class="col-md-12 search-table-col">
                                     <div class="form-group pull-right col-lg-3"><input class="form-control-sm search form-control" type="text" placeholder="Search by typing here.."></div><span class="counter pull-right"></span>
-                                    <div class="table-responsive table results">
+                                    <div class="table-responsive table results text-nowrap">
                                         <table class="table">
                                             <thead>
                                                 <tr>
@@ -322,12 +314,12 @@
         </div>
     </div>
     <!-- End: view-details-modal -->
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.5.0/js/bootstrap.bundle.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.8.0/Chart.bundle.min.js"></script>
-    <script src="assets/js/bs-init.js?h=08ba999e06fc97f895c72848bddb91c1"></script>
+    <script src="assets/js/jquery.min.js"></script>
+    <script src="assets/bootstrap/js/bootstrap.min.js"></script>
+    <script src="assets/js/chart.min.js"></script>
+    <script src="assets/js/bs-init.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-easing/1.4.1/jquery.easing.js"></script>
-    <script src="assets/js/style.js?h=d41d8cd98f00b204e9800998ecf8427e"></script>
+    <script src="assets/js/style.js"></script>
 </body>
 
 </html>
