--- a/book_appointment.html
+++ b/book_appointment.html
@@ -4,14 +4,14 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no">
-    <title>Book Chambers</title>
+    <title>Blank Page - Brand</title>
     <meta name="theme-color" content="#4e73df">
     <meta name="author" content="SRKP Technologies">
     <meta name="description" content="Doctor Appointment Booking">
     <link rel="stylesheet" href="assets/bootstrap/css/bootstrap.min.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Nunito:200,200i,300,300i,400,400i,600,600i,700,700i,800,800i,900,900i">
-    <link rel="stylesheet" href="assets/fonts/fontawesome-all.min.css">
-    <link rel="stylesheet" href="assets/fonts/font-awesome.min.css">
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.12.0/css/all.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="assets/fonts/fontawesome5-overrides.min.css">
     <link rel="stylesheet" href="assets/css/style.css">
 </head>
@@ -146,6 +146,49 @@
             <div class="container-fluid">
                 <h3 class="text-dark mb-4">Book Appointment</h3>
                 <div class="row mb-3">
+                    <div class="col-lg-4 col-xl-12">
+                        <div class="card shadow">
+                            <div class="card-header py-3">
+                                <p class="text-primary m-0 font-weight-bold">Total appointments on:&nbsp;<span>20/06/2020</span></p>
+                            </div>
+                            <div class="card-body">
+                                <div class="col-md-12 search-table-col">
+                                    <div class="form-group pull-right col-lg-3"><input class="form-control-sm search form-control" type="text" placeholder="Search by typing here.."></div><span class="counter pull-right"></span>
+                                    <div class="table-responsive table results today_bookings text-nowrap">
+                                        <table class="table">
+                                            <thead>
+                                                <tr>
+                                                    <th>SL. No.</th>
+                                                    <th>Date</th>
+                                                    <th>Patient's Name</th>
+                                                    <th>Contact Number</th>
+                                                    <th>Time</th>
+                                                    <th>Doctor</th>
+                                                    <th>Chamber</th>
+                                                </tr>
+                                            </thead>
+                                            <tbody>
+                                                <tr>
+                                                    <td>01</td>
+                                                    <td>17/06/2020</td>
+                                                    <td>Souvik Kundu</td>
+                                                    <td>7278491931</td>
+                                                    <td>17:00 PM</td>
+                                                    <td>Dr. Diptendra K. Sarkar</td>
+                                                    <td>Suraksha Diagnostic</td>
+                                                </tr>
+                                                <tr class="warning no-result">
+                                                    <td colspan="12"><i class="fa fa-warning text-danger"></i>&nbsp; Sorry, No result found !!!</td>
+                                                </tr>
+                                            </tbody>
+                                        </table>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="row mb-3">
                     <div class="col-lg-4">
                         <div class="card shadow mb-4">
                             <div class="card-header py-3">
@@ -204,10 +247,10 @@
                                         <form class="book-app-form">
                                             <div class="form-row">
                                                 <div class="col-12 col-xl-6">
-                                                    <div class="form-group"><label for="username"><strong>Patient's Name</strong></label><input class="form-control" type="text" name="username" placeholder="Type full name"></div>
+                                                    <div class="form-group"><label for="email"><strong>Contact Number</strong></label><input class="form-control" type="text" placeholder="Type mobile number"></div>
                                                 </div>
                                                 <div class="col-12 col-xl-6">
-                                                    <div class="form-group"><label for="email"><strong>Contact Number</strong></label><input class="form-control" type="text" placeholder="Type mobile number"></div>
+                                                    <div class="form-group"><label for="username"><strong>Patient's Name</strong></label><input class="form-control" type="text" name="username" placeholder="Type full name"></div>
                                                 </div>
                                             </div>
                                             <div class="form-row">
@@ -228,7 +271,7 @@
                                             </div>
                                             <div class="form-row">
                                                 <div class="col-12 col-xl-6">
-                                                    <div class="form-group"><label for="first_name"><strong>Appointment time</strong><br></label><select class="custom-select"><optgroup label="Select only one"><option value="0" selected="">-- Select Doctor Name --</option><option value="1">Dr. Diptendra K. Sarkar</option></optgroup></select></div>
+                                                    <div class="form-group"><label for="first_name"><strong>Appointment time</strong><br></label><input class="form-control" type="time"></div>
                                                 </div>
                                                 <div class="col-12 col-xl-6">
                                                     <div class="form-group"><label for="last_name"><strong>Remarks</strong></label><textarea class="form-control" placeholder="Type remarks here"></textarea></div>
@@ -250,9 +293,9 @@
             </div>
         </footer>
     </div><a class="border rounded d-inline scroll-to-top" href="#page-top"><i class="fas fa-angle-up"></i></a></div>
-    <script src="assets/js/jquery.min.js"></script>
-    <script src="assets/bootstrap/js/bootstrap.min.js"></script>
-    <script src="assets/js/chart.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.5.0/js/bootstrap.bundle.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.8.0/Chart.bundle.min.js"></script>
     <script src="assets/js/bs-init.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-easing/1.4.1/jquery.easing.js"></script>
     <script src="assets/js/style.js"></script>
