--- a/search_ot.html
+++ b/search_ot.html
@@ -4,14 +4,14 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no">
-    <title>Search OT</title>
+    <title>Blank Page - Brand</title>
     <meta name="theme-color" content="#4e73df">
     <meta name="author" content="SRKP Technologies">
     <meta name="description" content="Doctor Appointment Booking">
     <link rel="stylesheet" href="assets/bootstrap/css/bootstrap.min.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Nunito:200,200i,300,300i,400,400i,600,600i,700,700i,800,800i,900,900i">
-    <link rel="stylesheet" href="assets/fonts/fontawesome-all.min.css">
-    <link rel="stylesheet" href="assets/fonts/font-awesome.min.css">
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.12.0/css/all.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="assets/fonts/fontawesome5-overrides.min.css">
     <link rel="stylesheet" href="assets/css/style.css">
 </head>
@@ -199,6 +199,10 @@
                     </div>
                 </div>
                 <div class="row mb-3">
+                    <div class="col-lg-4 col-xl-12 text-center res-nf-col">
+                        <h3 class="text-danger mb-5"><i class="fa fa-warning"></i>&nbsp;Sorry, No results found !!</h3><button class="btn btn-outline-primary" type="button"><strong>Search again</strong></button></div>
+                </div>
+                <div class="row mb-3">
                     <div class="col-lg-4 col-xl-12">
                         <div class="card shadow">
                             <div class="card-header py-3">
@@ -249,9 +253,9 @@
             </div>
         </footer>
     </div><a class="border rounded d-inline scroll-to-top" href="#page-top"><i class="fas fa-angle-up"></i></a></div>
-    <script src="assets/js/jquery.min.js"></script>
-    <script src="assets/bootstrap/js/bootstrap.min.js"></script>
-    <script src="assets/js/chart.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.5.0/js/bootstrap.bundle.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.8.0/Chart.bundle.min.js"></script>
     <script src="assets/js/bs-init.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-easing/1.4.1/jquery.easing.js"></script>
     <script src="assets/js/style.js"></script>
